# Fireworks

./: .gitignore  Cargo.toml  README.md
src/: color.rs  firework.rs  main.rs  object.rs  star.rs  static_point.rs  trail.rs
