[package]
name = "fireworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant = "0.1.12"
pixels = "0.11.0"
rand = "0.8.5"
winit = "0.27.5"

# file size optinmailsations
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1